fix: keep date and time aligned when missing label
Closes #340

--- a/packages/form-js-viewer/assets/form-js.css
+++ b/packages/form-js-viewer/assets/form-js.css
@@ -136,6 +136,10 @@
   align-items: center;
 }
 
+.fjs-container .fjs-incollapsible-label {
+  min-height: 18.2px;
+}
+
 .fjs-container .fjs-form-field-description {
   display: block;
   color: var(--color-text-light);
